--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -4,10 +4,12 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="first no"/>
     <EditText
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/an1"/>
@@ -16,6 +18,7 @@
         android:layout_height="wrap_content"
         android:text="second no"/>
     <EditText
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/an2"/>
@@ -24,6 +27,7 @@
         android:layout_height="wrap_content"
         android:text="third no"/>
     <EditText
+        android:inputType=""
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/an3"/>
@@ -38,4 +42,10 @@
         android:layout_height="wrap_content"
         android:text="back"
         android:id="@+id/bk1"/>
+    <EditText
+        android:id="@+id/re"
+        android:visibility="gone"
+        android:editable="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
