--- a/app/src/main/res/layout/activity_div.xml
+++ b/app/src/main/res/layout/activity_div.xml
@@ -29,5 +29,11 @@
         android:layout_height="wrap_content"
         android:text="back"
         android:id="@+id/bk4"/>
+    <EditText
+        android:visibility="gone"
+        android:editable="false"
+        android:id="@+id/re1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
