--- a/app/src/main/res/layout/activity_mul.xml
+++ b/app/src/main/res/layout/activity_mul.xml
@@ -29,5 +29,11 @@
         android:layout_height="wrap_content"
         android:text="back"
         android:id="@+id/bk3"/>
+    <EditText
+        android:editable="false"
+        android:visibility="gone"
+        android:id="@+id/re4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
