--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -29,6 +29,12 @@
         android:layout_height="wrap_content"
         android:text="back"
        android:id="@+id/bk2"/>
+    <EditText
+        android:editable="false"
+        android:visibility="gone"
+        android:id="@+id/re2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 
 </LinearLayout>
